--- a/aws/cluster.yaml
+++ b/aws/cluster.yaml
@@ -7,12 +7,12 @@ metadata:
 
 nodeGroups:
   - name: ng-1
-    instanceType: t2.micro
-    desiredCapacity: 2
-    volumeSize: 30
+    instanceType: t2.nano
+    desiredCapacity: 1
+    volumeSize: 15
     ssh:
       allow: true # will use ~/.ssh/id_rsa.pub as the default ssh key
   - name: ng-2
-    instanceType: t2.small
+    instanceType: t2.nano
     desiredCapacity: 1
-    volumeSize: 30
+    volumeSize: 15
