Tried to create redicrect from HTTP to HTTPS

--- a/aws/helm-learning/Char-Ivan/templates/deployment.yaml
+++ b/aws/helm-learning/Char-Ivan/templates/deployment.yaml
@@ -6,6 +6,7 @@ metadata:
     app : {{ .Release.Name }}-deployment
 spec:
   replicas: {{ .Values.replicaCount }}
+  revisionHistoryLimit: {{ .Values.revisHistLimit }}
   selector:
     matchLabels:
       project: {{ .Release.Name }}
