--- a/aws/helm-learning/Char-Ivan/templates/ingress-hosts.yaml
+++ b/aws/helm-learning/Char-Ivan/templates/ingress-hosts.yaml
@@ -10,15 +10,23 @@ metadata:
     nginx.ingress.kubernetes.io/ssl-redirect: "true"
     alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:eu-central-1:031783097622:certificate/8a65a0eb-2a16-4065-8dcc-bab6bee25f95
 spec:
-  ingressClassName: nginx-example
   rules:
   - http:
       paths:
-      - path: /
-        pathType: Prefix
-        backend:
-          service:
-            name: rust-app-service
-            port:
-              number: 443
-
+        - path: /
+          pathType: Prefix
+          backend:
+            service:
+              name: ssl-redirect
+              port:
+                name: use-annotation
+ - host: vardidze.com
+    http:
+      paths:
+        - path: /
+          pathType: Prefix
+          backend:
+            service:
+              name: release-name-landing
+              port:
+                number: 443
