Tried to create redicrect from HTTP to HTTPS

--- a/aws/helm-learning/Char-Ivan/templates/ingress-hosts.yaml
+++ b/aws/helm-learning/Char-Ivan/templates/ingress-hosts.yaml
@@ -27,6 +27,6 @@ spec:
             pathType: Prefix
             backend:
               service:
-                name: release-name-landing
+                name: {{ .Release.Name }}-service
                 port:
                   number: 443
